2009-05-27  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoder.cs : the serializer somehow leaves binary
	  xml open, so close the writer as well as open elements.
	* TcpDuplexSessionChannel.cs : clear write buffer on each operation.
	  Do not output EndRecord and SizedMessage at a time.

2009-05-26  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : there was a miscalculation on the
	  length of the SizedMessage in the output.

2009-05-26  Atsushi Enomoto  <atsushi@ximian.com>

	* CommunicationObject.cs : use sane default timeout.
	* PeerCustomResolverBindingElement.cs : check timeout arg sanity.
	* TcpDuplexSessionChannel.cs : ditto.

2009-05-26  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : It seems that buffered stream channel
	  only accepts buffered messages, so do as such for write buffers.
	  Add RelatesTo header.

2009-05-26  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexSessionChannelBase.cs, DuplexChannelBase.cs:
	  rename from former to latter.

2009-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs : reader does not always return full
	  buffer (depending on the stream).

2009-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs, PeerOutputChannel.cs : use new PeerNode.ctor.

2009-05-25  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerCustomResolverBindingElement.cs : (Resolve) returned addresses
	  could be null.

2009-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelManagerBase.cs : there was annoying non-2.1 stuff.

2009-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpChannelListener.cs, TcpChannelFactory.cs : get reader quotas.

2009-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelManagerBase.cs : fix wrong session channel detection.

2009-05-22  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoderFactory.cs, BinaryMessageEncoder.cs
	  This encoder factory implements CreateSessionEncoder() and binary